# netthinne

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  justfile
.cargo/: config.toml
assets/: main.css
docs/: index.html  manifest.json  service-worker.js
docs/assets/: main-dxha36857d1ff9b72df.css  main-dxhb581dc1d2478db5d.css  main-dxhdb349027b7bdaf49.css  netthinne-dxh27e51771b06ffd6.js  netthinne-dxh43883d52ef6ec9.js  netthinne-dxh7610796e92815f9b.js  netthinne-dxh7d298adf4229027.js  netthinne-dxh9b16c6c803d416d.js  netthinne.js
public/: manifest.json  service-worker.js
scripts/: dehash_assets.py  inject_pwa_tags.py
src/: app.rs  camera.rs  image_utils.rs  main.rs  state.rs  translation.rs
src/ml/: labels_in1k_norsk.txt  labels_yolo_norsk.txt  mod.rs  model.cfg  recognition.rs  segmentation.rs
supply-chain/: config.toml
