[package]
name = "netthinne"
version = "0.1.0"
edition = "2021"
description = "Camera-based object recognition with Norwegian translation"

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Navigator",
    "MediaDevices",
    "MediaStream",
    "MediaStreamTrack",
    "MediaStreamConstraints",
    "MediaTrackConstraints",
    "HtmlVideoElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "Document",
    "Window",
    "Element",
] }
js-sys = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
wasm-logger = "0.2"

[profile.release]
opt-level = "s"
lto = true
