[package]
name = "netthinne"
version = "1.0.0"
edition = "2021"
description = "Camera-based object recognition with Norwegian translation"

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Navigator",
  "MediaDevices",
  "MediaStream",
  "MediaStreamTrack",
  "MediaStreamConstraints",
  "MediaTrackConstraints",
  "HtmlVideoElement",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "ImageData",
  "Document",
  "Window",
  "Element",
] }
js-sys = "0.3"
image = { version = "0.25", default-features = false }
log = "0.4"
wasm-logger = "0.2"
burn = { version = "0.20.1", default-features = false, features = ["ndarray"] }
burn-ndarray = { version = "0.20.1", default-features = false }
burn-store = { version = "0.20.1", features = ["std", "burnpack"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[build-dependencies]
burn-onnx = "0.21.0-pre.1"
